# teacher-llm_evening_projects

./: .env  .env.example  .gitignore  README.md  pyproject.toml
01_ai_doc_tutor/: app.py
02_invoice_receipt_analyzer/: app.py
03_multimodal_lecture_tutor_v2/: app_comment.py
04_research_agent/: app.py  app_comment.py
05_image_tagger/: image_tagger.py
llm_evening_projects_v2/: README.md  pyproject.toml
llm_evening_projects_v2/01_ai_doc_tutor/: app.py
llm_evening_projects_v2/02_invoice_receipt_analyzer/: app.py
llm_evening_projects_v2/03_multimodal_lecture_tutor_v2/: app.py
