[project]
name = "llm-evening-projects"
version = "0.1.0"
description = "Stable classroom projects for LLM multimodal evening class"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.38.0",
    "openai>=1.51.0",
    "python-dotenv>=1.0.1",
    "llama-index>=0.11.20",
    "llama-index-llms-openai>=0.2.16",
    "llama-index-embeddings-openai>=0.2.5",
    "llama-index-readers-file>=0.2.2",
    "pypdf>=5.0.0",
    "pandas>=2.2.2",
    "pillow>=10.4.0",
    "pymupdf>=1.27.2.3",
]
