[project]
name = "llm-evening-projects"
version = "0.2.0"
description = "Verified classroom projects for LLM multimodal evening class"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.35.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
    "llama-index>=0.11.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-embeddings-openai>=0.2.0",
    "pypdf>=4.0.0"
]
